[package]
name = "logion"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_asset_loader = "0.17.0"
bevy_framepace = "0.13.3"
bevy_rapier2d = { version = "0.22.0", features = [
	"simd-stable",
	"debug-render-2d",
] }
bevy_text = "0.11.2"
dyn-clone = "1.0.13"
image = "0.24.6"
mopa = "0.2.2"
noise = "0.8.2"
ordered-float = "3.7.0"
rand = "0.8.5"
regex = "1.9.5"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
